--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=urlshortener
+spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.username=postgres
+spring.datasource.password=Atilja2005271!
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
